# genshin-mats-table

./: Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
data/: README.md  clean-characters.json  en_itemid.json  fetch_data.py  jp_itemid.json  words.json
src/: component.rs  logic.rs  main.rs
src/logic/: asset.rs
style/: style.css  style.scss
