[package]
name = "genshin-mats-table"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
leptos = { version = "0.6.15", features = ["csr"] }
rust-embed = { version = "8.5.0", features = ["debug-embed", "include-exclude"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
more-asserts = "0.3.1"
